--- a/browser/package.json
+++ b/browser/package.json
@@ -45,7 +45,8 @@
   "license": "BSD-2-Clause",
   "dependencies": {
     "canvas": "^2.6.1",
-    "jsdom": "^16.4.0"
+    "jsdom": "^16.4.0",
+    "tmp": "^0.2.1"
   },
   "scripts": {
     "test": "mocha 'mocha_tests/**/*.js'",
