browser: add pako dev dependency
https://github.com/nodeca/pako

Change-Id: I115c6c729f6783a23856a0e41f1908a7fc7f61fe
Signed-off-by: Henry Castro <hcastro@collabora.com>

--- a/browser/Makefile.am
+++ b/browser/Makefile.am
@@ -165,7 +165,8 @@ NODE_MODULES_JS =\
 	node_modules/jquery-mousewheel/jquery.mousewheel.js \
 	node_modules/jquery-contextmenu/dist/jquery.contextMenu.js \
 	node_modules/jquery-ui-dist/jquery-ui.js \
-	node_modules/smartmenus/dist/jquery.smartmenus.js
+	node_modules/smartmenus/dist/jquery.smartmenus.js \
+	node_modules/pako/dist/pako_inflate.js
 
 COOL_LIBS_JS =\
 	ResizeObserverPolyfill.js \
