--- a/browser/package.json
+++ b/browser/package.json
@@ -30,7 +30,8 @@
     "uglify-js": "3.9.4",
     "uglifycss": "0.0.29",
     "uglifyify": "5.0.2",
-    "vex-js": "4.1.0"
+    "vex-js": "4.1.0",
+    "pako": "2.0.4"
   },
   "repository": {
     "type": "git",
